# agi

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  rfc.yml
.github/scripts/: build-leaderboard.js
.github/workflows/: leaderboard.yml  network-snapshots.yml  release-builds.yml  validate-projects.yml
docs/: PODS.md  POSTMORTEM_2026-04-09_FOUR_WAY_CHAIN_FORK.md  VISION.md
docs/rfcs/: 0000-template.md  README.md  RFC-001-verifiable-research.md  RFC-002-curriculum-dag.md  RFC-003-pouw-consensus.md
docs/runbooks/: README.md  chain-fork-recovery.md  full-node-bootstrap.md  sidecar-crash-recovery.md
projects/_template/: README.md
projects/academic-papers/: LEADERBOARD.md
projects/architect/: LEADERBOARD.md
projects/arkhe/: Cargo.toml  README.md  validation_experiment_8.py
projects/arkhe/baseline/: config.yaml  results.json
projects/arkhe/examples/: core_synchronization.rs
projects/arkhe/rootfs/etc/orbvm/: engine.conf
projects/arkhe/src/: geophysics.rs  lib.rs  pqp_engine.rs  temporal_engine.rs
projects/arkhe/src/geophysics/: core_sync.rs
projects/astrophysics/: LEADERBOARD.md  README.md
projects/dag/: README.md
projects/financial-analysis/: LEADERBOARD.md
projects/gpt2-tinystories/: LEADERBOARD.md  README.md
projects/matrix/: LEADERBOARD.md
projects/p2p-network/: LEADERBOARD.md
schemas/: research-receipt-v1.schema.json
scripts/: sign-receipt.js  validate-receipt.js  validate-receipt.test.js
snapshots/: latest.json
(+169090 files in other folders)
