[package]
name = "arkhe"
version = "0.14.3"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", optional = true }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
core-sync = ["reqwest", "chrono"]

[lib]
path = "src/lib.rs"

[[example]]
name = "core_synchronization"
path = "examples/core_synchronization.rs"
